--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,8 @@
 /*!
- * Blp Gresik v3.4.0 (https://Blp Gresik.io/)
+ * LENSA v3.4.0 (https://LENSA.io/)
  * Copyright 2023 Paul Laros
- * Copyright 2023 Blp Gresik
- * Licensed under MIT (https://github.com/Blp Gresik/Blp Gresik/blob/master/LICENSE)
+ * Copyright 2023 LENSA
+ * Licensed under MIT (https://github.com/LENSA/LENSA/blob/master/LICENSE)
  */
 
 // Variables
