--- a/static/css/cardstyle.css
+++ b/static/css/cardstyle.css
@@ -1,11 +1,13 @@
 .card-style {
     width: 280px;
     box-shadow: 5px 10px white;
+    background: #063871;
 }
 .style-select {
     width: 500px;
 }
 
+.silver a { color: white; }
 
 /* accordion-1 */
 #accordion-1{
